# llm-coder

./: .gitignore  README.ja.md  README.md  llm-coder-config.example.toml  llm_coder_config.example.toml  package-lock.json  package.json  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: github_comment_trigger.yml  playground-front-test.yml  playground-server-test.yml  python-test.yml
llm_coder/: agent.py  cli.py  filesystem.py  litellm_cli.py  logging_config.py  shell_command.py
playground/front/: package.json
playground/front/src/: utils.test.ts  utils.ts
playground/server/: README.md  main.py  pyproject.toml  test_main.py  test_textutil.py  textutil.py
tests/: __init__.py  test_agent.py
