[project]
name = "llm-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.68.2",
    "pydantic>=2.11.4",
    "structlog>=25.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.9",
]

[tool.uv.workspace]
members = ["playground/server"]
