[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "llm_coder"
version         = "0.1.0"
description     = "llm による自立型 Cli コーディングエージェントライブラリ"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }
authors         = [{ name = "Tomokatsu Iguchi" }]

dependencies = [
    "litellm",   # llm_coder が依存するライブラリを列挙
    "toml",
    "structlog",
    # 他に必要な依存関係があればここに追加
]

    [project.scripts]
    llm-coder = "llm_coder.cli:run_cli"

    [project.urls]
    "Homepage"    = "https://github.com/igtm/llm_coder"
    "Bug Tracker" = "https://github.com/igtm/llm_coder/issues"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0", "ruff>=0.11.9"]

[tool.setuptools.packages.find]
include = ["llm_coder*"]
exclude = ["playground*"]
