[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.4",
]

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
    "pytest>=8.3.5",
 "ruff>=0.11.9",
]

[tool.poe.tasks]
lint   = "ruff check ."
format = "ruff format ."
test   = "pytest"
check  = ["lint", "test"]
ci     = ["lint", "format", "test"]
